fix z-index on menu, so that it's in front of tabs-thing

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -11,6 +11,7 @@ nav {
 
 nav ul ul {
   display: none;
+  z-index: 100;
 }
 
   nav ul li:hover > ul {
